# FunctionVisualizer3D

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: FindASSIMP.cmake
include/assimp/: camera.h
include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
lib/: assimp  glfw3.lib
resources/: teapot.fbx
src/: main.cpp
src/common/: Graphics.h  InputController.cpp  InputController.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ScreenObject.cpp  ScreenObject.h  Shader.h  Texture.cpp  Texture.h  Utils.h  WorldObject.cpp  WorldObject.h
src/common/abstracts/: BoundBox.cpp  BoundBox.h
src/common/cameras/: CameraBase.h  FreeCamera.cpp  FreeCamera.h  TargetCamera.cpp  TargetCamera.h
src/common/function_drawers/: ImplicitFunctionDrawer.cpp  ImplicitFunctionDrawer.h  ParametricFunctionDrawer.cpp  ParametricFunctionDrawer.h
src/common/primitives/: BoundBox.cpp  BoundBox.h  BoundBoxRenderer.cpp  BoundBoxRenderer.h  Cube.cpp  Cube.h  FullscreenRectangle.cpp  FullscreenRectangle.h  Line.cpp  Line.h  Manipulator.cpp  Manipulator.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointsCloud.cpp  PointsCloud.h  Polygon.cpp  Polygon.h  Quad2D.cpp  Quad2D.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/common/scenes/: FunctionVisualizerScene.cpp  FunctionVisualizerScene.h  MaterialsScene.cpp  MaterialsScene.h  MultipleTexturesScene.cpp  MultipleTexturesScene.h  NURBSScene.cpp  NURBSScene.h  NormalMapScene.cpp  NormalMapScene.h  RaymarchingScene.cpp  RaymarchingScene.h  Scene.cpp  Scene.h  ToonScene.cpp  ToonScene.h
src/common/shaders/: AmbientDiffuseSpecularShader.cpp  AmbientDiffuseSpecularShader.h  ComputeShader.h  DefaultShader.cpp  DefaultShader.h  DiffuseShader.cpp  DiffuseShader.h  DiscardWithPerlinShader.h  FlatADSShader.h  MultipleTexturesShader.h  NormalMapShader.h  NormalsShader.cpp  NormalsShader.h  SingleColorShader.cpp  SingleColorShader.h  ToonADSShader.h
src/common/tasks/: HelloWorldTask.h  ParallelTask.h
src/common/trees/: CubeTree.cpp  CubeTree.h  CubeTreeRenderer.h
src/shaders/: ads_shadows.frag  ads_shadows.vert  ambient_diffuse_specular.frag  ambient_diffuse_specular.vert  bound_box.frag  bound_box.vert  default.frag  default.vert  diffuse.frag  diffuse.vert  discard.frag  discard.vert  flat_ads.frag  flat_ads.vert  multi_textures.frag  multi_textures.vert  normal_map.frag  normal_map.vert  normals.frag  normals.geom  normals.vert  point.frag  point.vert  quad.frag  quad.vert  raymarching.comp  raymarching.frag  raymarching.vert  toon.frag
